deploy: c386f5d23965a91b3af169ae569461e1fec32211

--- a/build-2/index.html
+++ b/build-2/index.html
@@ -11,4 +11,6 @@
 <p><strong>Build:</strong> 2</p>
 <p><strong>Branch:</strong> main</p>
 </div><h2>Test Suites</h2><ul>
+<li>📄 <a href='authors/index.html'>Authors Tests</a></li>
+<li>📄 <a href='books/index.html'>Books Tests</a></li>
 </ul></body></html>
